firefox visiblity solve

--- a/main.less
+++ b/main.less
@@ -1,10 +1,21 @@
-/**************************
-***************************
-@HEADER  
-***************************
-**************************/
+/**************************************
+ **
+ **              @HEADER  
+ **
+ **************************************
+*/
 
 /* used on banner images and carousels*/
+
+@keyframes fadeIn {
+  from{
+    opacity:0;
+  }
+  to{
+    opacity:1;
+  }
+}
+
 @keyframes scale {
   from{
     transform:scale(1.15,1.15);
@@ -50,45 +61,71 @@
   }
 }
 
-/**************************
-***************************
-@MAIN CONTENT
-***************************
-**************************/
+
+
+/**************************************
+ **
+ **           @MAIN CONTENT
+ **
+ **************************************
+*/
 
 /** used on sqs-blocks */
 @keyframes fadeUp {
   from{
      opacity:0;
      transform:translateY(10px);
+     -webkit-transform:translateY(10px);
+     -moz-transform:translateY(10px);
+     -o-transform:translateY(10px);
   }
   to{
      opacity:1;
      transform:translateY(0px);
+     -webkit-transform:translateY(0px);
+     -moz-transform:translateY(0px);
+     -o-transform:translateY(0px);
   }
 }
 @keyframes fadeSwivel {
   from{
     opacity:0;
     transform:rotateY(90deg);
+    -webkit-transform:rotateY(90deg);
+    -moz-transform:rotateY(90deg);
+    -o-transform:rotateY(90deg);
   }
   to{
       opacity:1;
       transform:rotateY(0deg);
+      -webkit-transform:rotateY(0deg);
+      -moz-transform:rotateY(0deg);
+      -o-transform:rotateY(0deg);
   }
 }
 @keyframes slideRight {
   from{
     opacity:0;
     transform:scale(0.9);
+    -webkit-transform:scale(0.9);
+    -moz-transform:scale(0.9);
+    -o-transform:scale(0.9);
   }
   to{
     opacity:1;
     transform:scale(1);
+    -webkit-transform:scale(1);
+    -moz-transform:scale(1);
+    -o-transform:scale(1);
   }
 }
 
-/* show elements when in edit mode */
+/* 
+ *
+ *@desc show elements when in edit mode
+ *
+*/
+
 .sqs-edit-mode-active{
   .will-be-visible{
     opacity:1 !important;
@@ -102,26 +139,175 @@
   }
 }
 
-/* add animations when is-visible class is triggered */
+/* 
+ *
+ *@desc add animations when is-visible class is triggered
+ *
+*/
+
 #page{
-  // max-width:1080px;
-  // margin:0 auto;
+  max-width:1080px;
+  margin:0 auto;
+  .sqs-col-4, .sqs-col-6{
+     opacity:0;
+     &.is-visible{
+       opacity:1 !important;
+       animation:slideRight 0.4s ease-in-out forwards;
+       -webkit-animation:slideRight 0.4s ease-in-out forwards;
+     } 
+     @media screen and (max-width:1024px){
+     width:100% !important;
+     .intrinsic{
+       max-height:300px !important;
+       max-width:100%;
+       overflow:hidden;
+       img{
+         position:static !important;
+         height:auto !important;
+         width:100% !important;
+       }
+     }
+   }
+   .sqs-block-button-element--small{
+     backface-visibility:hidden;
+   }
+   &.is-visible{
+     .sqs-block-button-element--small{
+       opacity:0;
+       backface-visibility:hidden;
+       animation:fadeIn linear 0.6s forwards;
+       -webkit-animation:fadeIn linear 0.6s forwards;
+       animation-delay:1s;
+     }
+   }
+  }
   .sqs-block{
     opacity:0;
     &.is-visible{
       animation:fadeUp 0.4s ease-in-out forwards;
+      -webkit-animation:fadeUp 0.4s ease-in-out forwards;
     }
   }
-  .sqs-col-4{
-    opacity:0;
-    &.is-visible{
-      animation:slideRight 0.4s ease-in-out forwards;
-    }    
+}
+
+
+/* 
+ *
+ *@desc TEAM PAGE list view and items styles
+ *
+*/
+
+.team-list-view{
+  display:flex;
+  display:-webkit-flex;
+  flex-wrap:wrap;
+  -webkit-flex-wrap:wrap;
+  justify-content:space-around;
+  -webkit-justify-content:space-around;
+  .item{
+    max-width:450px;
+    display:flex;
+    display:-webkit-flex;
+    cursor:pointer;
+    margin-bottom:1em;
+    .content{
+      padding:1em;
+      .image-wrapper .content-fit{
+        height:200px;
+        margin-bottom:1em;
+      }
+      .header{
+        text-align:center;
+        padding-bottom:2em;
+        .title{
+          font-size:1.2em;
+        }
+        .meta{
+           p{
+            font-size:0.9em;
+            line-height:1.7em;
+            padding:0;
+            margin:0;
+          }         
+        }
+      }
+      .description{
+        font-size:0.8em;
+        text-align:center;
+      }
+      .action{
+        padding-top:1em;
+        .button{
+          font-size:0.8em;
+          text-align:center;
+          background:#68835D;
+          max-width:150px;
+          margin:0 auto;
+          padding:5px 10px;
+          color:white;
+        }
+      }
+    }
   }
-  .sqs-col-6{
+}
+
+/**************************************
+ **
+ **           @MODAL CONTENT
+ **
+ **************************************
+*/
+
+
+#modal-popup{
+  position:fixed;
+  top:0;
+  left:0;
+  display:flex;
+  display: -webkit-flex;
+  align-items:center;
+  -webkit-align-items:center;
+  height:100%;
+  width:100%;
+  background:rgba(10,10,10,0.5);
+  justify-content:center;
+  -webkit-justify-content:center;
+  visibility:hidden;
+  opacity:0;
+  transition:opacity 0.4s;
+  &.active{
+    opacity:1;
+    visibility:visible;
+    .modal-content{
+      animation:slideRight 0.2s ease-in-out forwards;
+      -webkit-animation:slideRight 0.2s ease-in-out forwards;
+      animation-delay:0.3s;
+      -webkit-animation-delay:0.3s;
+    }
+  }
+  .modal-content{
     opacity:0;
-    &.is-visible{
-      animation:slideRight 0.4s ease-in-out forwards;
-    }    
+    background:white;
+    border-radius:4px;
+    padding:1em;
+    text-align:left;
+    .close{
+      cursor:pointer;
+      text-align:right;
+    }
+    .modal-title{
+      font-weight:800;
+      font-size:1.5em;
+      text-align:center;
+      padding-top:0.5em;
+      padding-bottom:0.5em;
+    }
+    .modal-image{
+      display:flex;
+      justify-content:center;
+      img{
+          left:0 !important;
+      }
+    }
   }
 }
